--- a/requirements.txt
+++ b/requirements.txt
@@ -1,215 +1,7 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.11.18
-aiosignal==1.3.2
-altair==4.2.2
-annotated-types==0.7.0
-antlr4-python3-runtime==4.9.3
-anyio==4.8.0
-async-timeout==4.0.3
-attrs==25.1.0
-beautifulsoup4==4.12.3
-black==24.10.0
-blinker==1.9.0
-blis==1.3.0
-cachetools==5.5.1
-catalogue==2.0.10
-certifi==2024.12.14
-cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.4.1
-click==8.1.8
-cloudpathlib==0.21.0
-colorama==0.4.6
-confection==0.1.5
-contourpy==1.3.1
-cycler==0.12.1
-cymem==2.0.11
-dataclasses-json==0.6.7
-diskcache==5.6.3
-distro==1.9.0
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
-entrypoints==0.4
-et_xmlfile==2.0.0
-exceptiongroup==1.2.2
-faiss-cpu==1.7.4
-fastapi==0.115.12
-filelock==3.18.0
-filetype==1.2.0
-flake8==7.1.1
-FLAML==2.3.4
-Flask==3.1.0
-flask-cors==5.0.1
-flatbuffers==25.2.10
-fonttools==4.55.7
-frozendict==2.4.6
-frozenlist==1.6.0
-fsspec==2025.3.2
-gitdb==4.0.12
-GitPython==3.1.44
-google-ai-generativelanguage==0.6.18
-google-api-core==2.24.0
-google-api-python-client==2.159.0
-google-auth==2.38.0
-google-auth-httplib2==0.2.0
-google-generativeai==0.3.2
-googleapis-common-protos==1.66.0
-greenlet==3.2.1
-grpcio==1.69.0
-grpcio-status==1.49.0rc1
-h11==0.14.0
-html5lib==1.1
-httpcore==1.0.7
-httplib2==0.22.0
-httpx==0.28.1
-httpx-sse==0.4.0
-huggingface-hub==0.30.2
-idna==3.10
-importlib_metadata==8.6.1
-itsdangerous==2.2.0
-Jinja2==3.1.5
-jiter==0.8.2
-joblib==1.4.2
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-kiwisolver==1.4.8
-langchain==0.3.24
-langchain-community==0.3.23
-langchain-core==0.3.56
-langchain-google-genai==2.1.4
-langchain-tavily==0.2.0
-langchain-text-splitters==0.3.8
-langcodes==3.5.0
-langsmith==0.1.147
-language_data==1.3.0
-lxml==5.3.0
-marisa-trie==1.2.1
-Markdown==3.8
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-marshmallow==3.26.1
-matplotlib==3.10.0
-mccabe==0.7.0
-mdurl==0.1.2
-mpmath==1.3.0
-multidict==6.4.3
-multitasking==0.0.11
-murmurhash==1.0.12
-mypy==1.16.0
-mypy-extensions==1.0.0
-networkx==3.4.2
-nltk==3.9.1
-numpy==1.26.4
-olefile==0.47
-ollama==0.4.8
-omegaconf==2.3.0
-openai==1.14.2
-opencv-python==4.11.0.86
-orjson==3.10.17
-packaging==23.2
-pandas==2.2.3
-pathspec==0.12.1
-pdf2image==1.17.0
-peewee==3.17.8
-Pillow==9.5.0
-platformdirs==4.3.6
-portalocker==3.1.1
-preshed==3.0.9
-propcache==0.3.1
-proto-plus==1.25.0
-protobuf==3.20.3
-pyarrow==19.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pyautogen==0.2.0b6
-pycodestyle==2.12.1
-pycparser==2.22
-pydantic==2.11.4
-pydantic-settings==2.9.1
-pydantic_core==2.33.2
-pydeck==0.9.1
-pyflakes==3.2.0
-Pygments==2.19.1
-Pympler==1.1
-pypandoc==1.15
-pyparsing==3.2.1
-pypdf==5.4.0
-pypdfium2==4.30.1
-pyreadline3==3.5.4
-pytesseract==0.3.13
-python-dateutil==2.9.0.post0
-python-docx==1.1.2
-python-dotenv==1.0.0
-python-iso639==2025.2.18
-python-magic==0.4.27
-python-magic-bin==0.4.14
-python-multipart==0.0.20
-pytz==2024.2
-pywin32==308
-PyYAML==6.0.2
-RapidFuzz==3.13.0
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.3
-requests-toolbelt==1.0.0
-rich==13.9.4
-rpds-py==0.22.3
-rsa==4.9
-safetensors==0.5.3
-scikit-learn==1.2.2
-scipy==1.15.2
-sentence-transformers==4.0.2
-shellingham==1.5.4
-six==1.17.0
-smart-open==7.1.0
-smmap==5.0.2
-sniffio==1.3.1
-soupsieve==2.6
-spacy==3.8.5
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SQLAlchemy==2.0.40
-srsly==2.5.1
-starlette==0.46.2
-streamlit==1.22.0
-streamlit-option-menu==0.3.2
-sympy==1.14.0
-tabulate==0.9.0
-tenacity==8.5.0
-termcolor==2.5.0
-thinc==8.3.6
-threadpoolctl==3.5.0
-tiktoken==0.4.0
-tokenizers==0.21.1
-toml==0.10.2
-tomli==2.2.1
-toolz==1.0.0
-torch==2.7.0
-tornado==6.4.2
-tqdm==4.67.1
-transformers==4.51.1
-typer==0.15.3
-typing-inspect==0.9.0
-typing-inspection==0.4.0
-typing_extensions==4.12.2
-tzdata==2025.1
-tzlocal==5.2
-unstructured==0.9.2
-uritemplate==4.1.1
-urllib3==2.3.0
-uvicorn==0.34.2
-validators==0.34.0
-wasabi==1.1.3
-watchdog==6.0.0
-weasel==0.4.1
-webencodings==0.5.1
-Werkzeug==3.1.3
-wrapt==1.17.2
-xgboost==2.1.3
-xlrd==2.0.1
-XlsxWriter==3.2.3
-yarl==1.20.0
-yfinance==0.2.52
-zipp==3.21.0
-zstandard==0.23.0
+flask
+scikit-learn
+transformers
+torch
+stable-baselines3
+gym
+faker
